--- a/Quiron.LojaVirtual.Web/Views/Shared/ProdutoDetalhes.cshtml
+++ b/Quiron.LojaVirtual.Web/Views/Shared/ProdutoDetalhes.cshtml
@@ -2,6 +2,16 @@
 
 <div class="well">
     <h3><strong>@Model.nome</strong></h3>
-    <h3><span class="pull-right label label-primary">@Model.preco.ToString("c") </span ></h3 >
-    <h3><span class="lead">@Model.descricao </span ></h3 >
+    <h3><span class="pull-right label label-primary">@Model.preco.ToString("c") </span></h3>
+
+    @using (Html.BeginForm("Adicionar", "Carrinho"))
+    {
+        <div class="pull-right">
+            @Html.HiddenFor(x => x.produtoID)
+            @Html.Hidden("returnUrl",Request.Url.PathAndQuery)
+            <input type="submit" class="btn btn-success" value="Comprar"/>
+        </div>
+    }
+
+    <h3><span class="lead">@Model.descricao </span></h3>
 </div>
