--- a/Quiron.LojaVirtual.Web/Views/Shared/_Layout.cshtml
+++ b/Quiron.LojaVirtual.Web/Views/Shared/_Layout.cshtml
@@ -15,6 +15,9 @@
 <body>
     <div class="navbar navbar-inverse" roole="navigation">
         <a class="navbar-brand" href="#">Quiron Loja Virtual - Seu esporte é aqui </a>
+
+        @Html.Action("Resumo","Carrinho")
+
     </div>
     <div class="row panel">
 
